Search Engine updated and working

--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -1,64 +1,49 @@
-.Weather form .search-engine {
-  max-width: fit-content;
-  float: left;
-}
-
-.Weather .btn {
-  margin-left: 8px;
-  transition: all 200ms ease-in-out;
-  width: 40px;
-}
-.Weather :hover.btn {
-  background-color: #a8edea;
-  border-color: #a8edea;
-}
-
-.Weather header {
+.WeatherInfo header {
   font-family: "Yanone Kaffeesatz", sans-serif;
   margin-top: 30px;
 }
 
-.Weather h1 {
+.WeatherInfo h1 {
   font-size: 80px;
   line-height: 60px;
   padding-bottom: 10px;
 }
 
-.Weather h2 {
+.WeatherInfo h2 {
   font-size: 35px;
   line-height: 25px;
 }
 
-.Weather h3 {
+.WeatherInfo h3 {
   font-size: 25px;
   line-height: 30px;
   text-transform: capitalize;
 }
-.Weather h4 {
+.WeatherInfo h4 {
   font-size: 17px;
   line-height: 10px;
 }
 
-.Weather .current-weather {
+.WeatherInfo .current-weather {
   margin-top: 30px;
   text-align: center;
 }
-.Weather .current-weather i {
+.WeatherInfo .current-weather i {
   font-size: 100px;
 }
-.Weather .current-weather .temperature {
+.WeatherInfo .current-weather .temperature {
   font-size: 60px;
   line-height: 65px;
   position: relative;
   left: 24px;
 }
-.Weather .current-weather .units {
+.WeatherInfo .current-weather .units {
   font-size: 15px;
   position: relative;
   bottom: 24px;
 }
 
-.Weather .units .active {
+.WeatherInfo .units .active {
   color: black;
   cursor: default;
 }
