Unit conversion is working

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-.App {
+.App .container {
   max-width: 600px;
 }
+
 .App #main-app {
   background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
   margin-top: 10px;
