--- a/src/DailyForecast.css
+++ b/src/DailyForecast.css
@@ -7,14 +7,14 @@
   text-align: center;
 }
 
-.DailyForecast #daily-forecast .card-body i {
+.DailyForecast i {
   font-size: 35px;
   padding: 8px;
 }
-.DailyForecast #daily-forecast .card-body h6 {
+.DailyForecast h6 {
   font-size: 15px;
 }
-.DailyForecast #daily-forecast .card-body p {
+.DailyForecast p {
   font-size: 13px;
   line-height: 10px;
 }
