--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,14 @@
   max-width: 600px;
 }
 
-.App #main-app {
+.App .main-app {
   background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
   margin-top: 10px;
   padding: 30px;
   border-radius: 5%;
 }
 
-.App #github-link a {
+.App .github a {
   text-decoration: none;
   color: #fa98b7;
 }
