--- a/src/WeatherSearch.css
+++ b/src/WeatherSearch.css
@@ -9,6 +9,6 @@
   width: 40px;
 }
 .WeatherSearch :hover.btn {
-  background-color: #a8edea;
-  border-color: #a8edea;
+  background-color: rgb(22, 209, 219);
+  border-color: rgb(22, 209, 219);
 }
